# WeaktoStrong

./: .env.example  .gitignore  .lintstagedrc.js  CHALLENGE_CONTENT.md  CLAUDE_MEMORY.md  CONTEXT_CHUNKING_STRATEGY.md  CURRENT_STATUS_ACCURATE.md  DEVELOPMENT_PLAN.md  HANDOVER.md  PHASE_4_COMPLETION.md  PHASE_6_COMPLETION.md  README.md  SMART_CONTEXT_IMPLEMENTATION.md  commitlint.config.js  deployment-notes.md  package-lock.json  package.json  simple-deploy.md  test_data_runner.py  test_docker_sandbox.py  turbo.json
.husky/: pre-commit
MDfiles/: PHASE_5-5_COMPLETION.md  PHASE_5_COMPLETION.md
_deprecated_2025_archive/: README_ARCHIVE.md  verify_system.py
_deprecated_2025_archive/legacy_backend/: main.py  pyproject.toml  requirements.txt
backend/: .env.test  Dockerfile.prod  create_tables.py  init.sql  main.py  pytest.ini  requirements.txt  ruff.toml  test_connection.py
contexts/: AUTH_CONTEXT.md  TESTING_CONTEXT.md  UI_CONTEXT.md
docs/: initial plan.docx  weak_to_strong_technical_documentation.docx
scripts/: check-docker.sh  find-domain.sh  setup-env.sh  setup-ollama.sh
weak-to-strong/: .env.example  .gitignore  .prettierignore  .prettierrc  AI_DEVELOPMENT_CONTEXT.md  AI_PROMPTS.md  DEVELOPMENT_PLAN.md  HANDOVER.md  (+8 more)
weak-to-strong/backend/: alembic.ini  main.py  pyproject.toml  railway.toml  test_auth_endpoints.py
weak-to-strong/backend/alembic/: env.py
weak-to-strong/backend/alembic/versions/: 8b9f8b9c4683_add_validation_rules_column_to_.py
weak-to-strong/backend/app/api/v1/: auth.py  challenges.py  payments.py
weak-to-strong/backend/app/core/: auth.py  database.py  deps.py  monitoring.py  resilience.py
weak-to-strong/backend/app/core/ai/: challenge_context.py
weak-to-strong/backend/app/models/: challenge.py  user.py
weak-to-strong/backend/app/schemas/: auth.py
weak-to-strong/backend/app/services/: certificate_service.py  execution_service.py  progress.py  stripe_service.py  test_runner.py
weak-to-strong/backend/app/services/runners/: data_runner.py
weak-to-strong/backend/scripts/: seed_cloud_challenges.py
weak-to-strong/backend/seeds/: seed_data_challenges.py
weak-to-strong/backend/tests/: integration_test.py
weak-to-strong/backend/tests/integration/: test_auth_api.py
weak-to-strong/backend/tests/unit/: test_auth_service.py
(+151 files in other folders)
