[project]
name = "weak-to-strong-backend"
version = "0.1.0"
description = "FastAPI backend for Weak-to-Strong platform"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "alembic==1.13.0",
    "pydantic==2.5.0",
    "asyncpg==0.29.0",
    "redis==5.0.1",
    "httpx==0.25.2",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "anthropic==0.7.8",
    "boto3==1.34.0",
    "docker==6.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "ruff==0.1.6",
    "black==23.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.black]
line-length = 88
target-version = ['py311']